--- a/index.html
+++ b/index.html
@@ -4,8 +4,153 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+
+  <!--Styles-->
+  <link rel="stylesheet" href="./css/responsive.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  
+  <header>
+    <div>
+    <img src="./img/logo.png" alt="logo">
+    <p>Jonas Andrade - Psicólogo</p>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#servicos">Serviços</a></li>
+      <li><a href="#atendimento">Tipos de atendimento</a></li>
+      <li><a href="#depoimentos">Depoimentos</a></li>
+      <li><a href="#sobremim">Sobre mim</a></li>
+      <li><a href="#perguntas">Perguntas frequentes</a></li>
+      <li><a href="#contato">Contato</a></li>
+    </ul>
+  </nav>
+  </header>
+
+  <section>
+    <div> <h1>Olá, como você está hoje?</h1>
+    
+      <p>
+        Sei que, se você chegou até aqui, está buscando por ajuda para lidar com algo que não está te fazendo bem. Meu nome é Jonas Andrade, sou psicólogo clínico, neuropsicólogo e estou aqui para te ajudar.
+      </p>
+
+      <button><a href="">Vamos conversar?</a></button>
+    </div>
+
+    <div>
+      <img src="./img/jonas.webp" alt="">
+    </div>
+
+  </section>
+
+  <section>
+    <h2 id="servicos">Serviços</h2>
+  <p>
+    Vamos construir juntos um ambiente acolhedor e livre de julgamentos para que você possa explorar seus pensamentos e sentimentos. Desde a descoberta de novas perspectivas até o enfrentamento de questões desafiadoras, estou comprometido em te ajudar a alcançar seus objetivos. Se você está pronto para cuidar de si e se dar essa chance, pode contar comigo!
+  </p>
+  </section>
+
+  <section>
+    <button><a href="">
+      Clique aqui e agende sua sessão
+    </a></button>
+  </section>
+
+  <section>
+    <h2 id="atendimento">Tipos de Atendimentos</h2>
+
+    <div>
+      <div>
+        <img src="https://lh5.googleusercontent.com/34qLt5SZtkKrrq81gVIyIX42lvlXCSxbHesd3VJA-pGIplvtX_NA3amngBW1r7AU08EVQ5gcovu2dpy2pi3bg5Qhv5xpUHAjmXyI-nNpTNoRVu8lpBv5onLT1mt5NyYh=w1280" alt="">
+        <h3>Psicoterapia individual</h3>
+        <p>
+          Atendimento a adolescentes, adultos e idosos em um espaço confidencial para explorar desafios, problemas e angústias, desenvolvendo estratégias de autocuidado e inteligência emocional.
+        </p>
+      </div>
+      <div>
+        <img src="https://lh5.googleusercontent.com/34qLt5SZtkKrrq81gVIyIX42lvlXCSxbHesd3VJA-pGIplvtX_NA3amngBW1r7AU08EVQ5gcovu2dpy2pi3bg5Qhv5xpUHAjmXyI-nNpTNoRVu8lpBv5onLT1mt5NyYh=w1280" alt="">
+        <h3>Psicoterapia individual</h3>
+        <p>
+          Atendimento a adolescentes, adultos e idosos em um espaço confidencial para explorar desafios, problemas e angústias, desenvolvendo estratégias de autocuidado e inteligência emocional.
+        </p>
+      </div>
+      <div>
+        <img src="https://lh5.googleusercontent.com/34qLt5SZtkKrrq81gVIyIX42lvlXCSxbHesd3VJA-pGIplvtX_NA3amngBW1r7AU08EVQ5gcovu2dpy2pi3bg5Qhv5xpUHAjmXyI-nNpTNoRVu8lpBv5onLT1mt5NyYh=w1280" alt="">
+        <h3>Psicoterapia individual</h3>
+        <p>
+          Atendimento a adolescentes, adultos e idosos em um espaço confidencial para explorar desafios, problemas e angústias, desenvolvendo estratégias de autocuidado e inteligência emocional.
+        </p>
+      </div>
+    </div>
+    <div>
+      <div>
+        <img src="https://lh5.googleusercontent.com/34qLt5SZtkKrrq81gVIyIX42lvlXCSxbHesd3VJA-pGIplvtX_NA3amngBW1r7AU08EVQ5gcovu2dpy2pi3bg5Qhv5xpUHAjmXyI-nNpTNoRVu8lpBv5onLT1mt5NyYh=w1280" alt="">
+        <h3>Psicoterapia individual</h3>
+        <p>
+          Atendimento a adolescentes, adultos e idosos em um espaço confidencial para explorar desafios, problemas e angústias, desenvolvendo estratégias de autocuidado e inteligência emocional.
+        </p>
+      </div>
+      <div>
+        <img src="https://lh5.googleusercontent.com/34qLt5SZtkKrrq81gVIyIX42lvlXCSxbHesd3VJA-pGIplvtX_NA3amngBW1r7AU08EVQ5gcovu2dpy2pi3bg5Qhv5xpUHAjmXyI-nNpTNoRVu8lpBv5onLT1mt5NyYh=w1280" alt="">
+        <h3>Psicoterapia individual</h3>
+        <p>
+          Atendimento a adolescentes, adultos e idosos em um espaço confidencial para explorar desafios, problemas e angústias, desenvolvendo estratégias de autocuidado e inteligência emocional.
+        </p>
+      </div>
+      <div>
+        <img src="https://lh5.googleusercontent.com/34qLt5SZtkKrrq81gVIyIX42lvlXCSxbHesd3VJA-pGIplvtX_NA3amngBW1r7AU08EVQ5gcovu2dpy2pi3bg5Qhv5xpUHAjmXyI-nNpTNoRVu8lpBv5onLT1mt5NyYh=w1280" alt="">
+        <h3>Psicoterapia individual</h3>
+        <p>
+          Atendimento a adolescentes, adultos e idosos em um espaço confidencial para explorar desafios, problemas e angústias, desenvolvendo estratégias de autocuidado e inteligência emocional.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <button>
+      <a href="">Clique aqui e agende uma consulta </a>
+    </button>
+  </section>
+
+  <section>
+    <h3 id="depoimentos">Depoimentos</h3>
+    <div>
+      <h3>CA, Mulher, 52 anos</h3>
+      <h3>(Psicoterapia Onilne)</h3>
+      <p>
+        "No começo tive um pouco de resistencia por ser algo online, mas depois de algumas sessões já estava me sentindo muito segura para trabalhar minhas questões. Ainda estou no processo mas confio muito no profissional que escolhi para me ajudar."
+      </p>
+    </div>
+    <p></p>
+  </section>
+  <section>
+   <div>
+    <img src="" alt="">
+  </div>
+   <div> 
+    <h3 id="sobremim">Sobre mim</h3>
+    <p>
+      Sou psicólogo, formado pela Universidade de Brasília e com Pós graduação em neuropsicologia.  Possuo uma sólida experiência clínica que abrange intervenções em casos de crises, depressão, ansiedade, compulsões, violência contra mulheres, bem como acompanhamento psicoterapêutico de indivíduos neurodivergentes. Atualmente atendo na modalidade online e presencial: adolescentes, adultos, idosos e casais.
+    </p>
+   </div>
+  </section>
+  <section>
+    <h3 id="perguntas">Perguntas frequentes</h3>
+
+  </section>
+  <section>
+    <h3 id="contato">Entre em contato</h3>
+    <div>
+      <a href=""><img src="" alt="">WhatsApp</a>
+      <a href=""><img src="" alt="">Email</a>
+    </div>
+    <div>Mapa</div>
+  </section>
+
+  <footer>
+    <p>@ Todos os direitos reservdos - Feito por <a href="https://www.linkedin.com/in/eudes-nilton-057ab816a/">Eudes Nilton</a></p>
+  </footer>
 </body>
 </html>
