finished HTML, starting css

--- a/index.html
+++ b/index.html
@@ -11,52 +11,68 @@
 </head>
 <body>
   <header>
-    <div>
+    <div class="logo">
     <img src="./img/logo.png" alt="logo">
     <p>Jonas Andrade - Psicólogo</p>
   </div>
+<div style="display: none;" class="menu">
   <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#servicos">Serviços</a></li>
-      <li><a href="#atendimento">Tipos de atendimento</a></li>
-      <li><a href="#depoimentos">Depoimentos</a></li>
-      <li><a href="#sobremim">Sobre mim</a></li>
-      <li><a href="#perguntas">Perguntas frequentes</a></li>
-      <li><a href="#contato">Contato</a></li>
-    </ul>
+    <a href="#">Home</a>
+    <a href="#servicos">Serviços</a>
+    <a href="#atendimento">Tipos de atendimento</a>
+    <a href="#depoimentos">Depoimentos</a>
+    <a href="#sobremim">Sobre mim</a>
+    <a href="#perguntas">Perguntas frequentes</a>
+    <a href="#contato">Contato</a>
+
   </nav>
+</div>
+<div style="display: none;" class="menu_mobile">
+  <nav>
+    <a href="#">Home</a>
+    <a href="#servicos">Serviços</a>
+    <a href="#atendimento">Tipos de atendimento</a>
+    <a href="#depoimentos">Depoimentos</a>
+    <a href="#sobremim">Sobre mim</a>
+    <a href="#perguntas">Perguntas frequentes</a>
+    <a href="#contato">Contato</a>
+
+  </nav>
+</div>
   </header>
 
-  <section>
-    <div> <h1>Olá, como você está hoje?</h1>
+  <main>
+  <section class="apresentacao">
+    <div class="apresentacao_principal"> 
+      <h1>Olá, como você está hoje?</h1>
     
       <p>
-        Sei que, se você chegou até aqui, está buscando por ajuda para lidar com algo que não está te fazendo bem. Meu nome é Jonas Andrade, sou psicólogo clínico, neuropsicólogo e estou aqui para te ajudar.
+        Sei que, se você chegou até aqui, está buscando por algum tipo de ajuda. Sou psicologo e estou aqui para te ajudar. 
       </p>
-
-      <button><a href="">Vamos conversar?</a></button>
+      <button>
+      <a href="">Vamos conversar?</a>
+    </button>
     </div>
 
-    <div>
-      <img src="./img/jonas.webp" alt="">
+    <div class="apresentacao_img">
+      <img src="./img/logoprincipal.png" alt="">
     </div>
 
   </section>
 
-  <section>
+  <section class="servicos" >
     <h2 id="servicos">Serviços</h2>
   <p>
     Vamos construir juntos um ambiente acolhedor e livre de julgamentos para que você possa explorar seus pensamentos e sentimentos. Desde a descoberta de novas perspectivas até o enfrentamento de questões desafiadoras, estou comprometido em te ajudar a alcançar seus objetivos. Se você está pronto para cuidar de si e se dar essa chance, pode contar comigo!
   </p>
   </section>
 
-  <section>
+  <section class="button">
     <button><a href="">
       Clique aqui e agende sua sessão
     </a></button>
   </section>
-
+<!--
   <section>
     <h2 id="atendimento">Tipos de Atendimentos</h2>
 
@@ -148,9 +164,11 @@
     </div>
     <div>Mapa</div>
   </section>
-
+</main>
   <footer>
     <p>@ Todos os direitos reservdos - Feito por <a href="https://www.linkedin.com/in/eudes-nilton-057ab816a/">Eudes Nilton</a></p>
   </footer>
+-->
+  <script src="./js/script.js"></script>i
 </body>
 </html>
