--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
         <nav>
           <a href="#">Home</a>
           <a href="#servicos">Serviços</a>
-          <a href="#atendimento">Tipos de atendimento</a>
+          <a href="#atendimento">Atendimento</a>
           <a href="#depoimentos">Depoimentos</a>
           <a href="#sobremim">Sobre mim</a>
-          <a href="#perguntas">Perguntas frequentes</a>
           <a href="#contato">Contato</a>
         </nav>
       </div>
 
-      <div class="menu_mobile" id="menu-mobile">
-        <button>Menu</button>
+      <button onClick="animarMenu()" id="btn_menu">
+        <span id="hamburger"></span>
+      </button>
+      <div class="menu_mobile" id="menu_mobile">
         <nav>
           <a href="#">Home</a>
           <a href="#servicos">Serviços</a>
           <a href="#atendimento">Tipos de atendimento</a>
           <a href="#depoimentos">Depoimentos</a>
           <a href="#sobremim">Sobre mim</a>
-          <a href="#perguntas">Perguntas frequentes</a>
           <a href="#contato">Contato</a>
         </nav>
       </div>
@@ -51,7 +51,7 @@
             ajuda. Sou psicologo e estou aqui para te ajudar.
           </p>
           <button>
-            <a href="">Vamos conversar?</a>
+            <a href="https://api.whatsapp.com/message/HMEDG4CMPXDBM1?autoload=1&app_absent=0">Vamos conversar?</a>
           </button>
         </div>
 
@@ -60,8 +60,8 @@
         </div>
       </section>
 
-      <section class="servicos">
-        <h2 id="servicos">Serviços</h2>
+      <section id="servicos" class="servicos">
+        <h2 >Serviços</h2>
         <p>
           Vamos construir juntos um ambiente acolhedor e livre de julgamentos
           para que você possa explorar seus pensamentos e sentimentos. Desde a
@@ -73,11 +73,11 @@
       </section>
 
       <section class="button">
-        <button><a href=""> Clique aqui e agende sua sessão </a></button>
+        <button><a href="https://api.whatsapp.com/message/HMEDG4CMPXDBM1?autoload=1&app_absent=0"> Clique aqui e agende sua sessão </a></button>
       </section>
 
-      <section class="atendimento">
-        <h2 id="atendimento">Tipos de Atendimentos</h2>
+      <section id="atendimento" class="atendimento">
+        <h2 >Atendimentos</h2>
 
         <div class="container_atendimento">
           <div class="container_tipo">
@@ -87,37 +87,45 @@
             />
             <h3>Psicoterapia individual</h3>
             <p>
-              Atendimento a adolescentes, adultos e idosos em um espaço
-              confidencial para explorar desafios, problemas e angústias,
-              desenvolvendo estratégias de autocuidado e inteligência emocional.
+              O atendimento individual é voltado para adolescentes, adultos e idosos. Meu foco é compreender você e como você se relaciona com o mundo. Quero abraçar suas dores e sentimentos, ajudando no seu processo de individualização por meio do autoconhecimento.As queixas mais comuns de adultos que iniciam a psicoterapia e que tendem a se perceber melhoras após a terapia incluem crises de ansiedade, depressão e/ou tristeza profunda, lutos, problemas com autoimagem, angústias, entre outras questões em momentos mais delicados da vida.
             </p>
           </div>
-        </div>
 
-        <div class="container_atendimento">
           <div class="container_tipo">
             <img
               src="https://lh4.googleusercontent.com/T7x09bkucvmtsqNSJ9WLm5y15S-DtFYQVcwNq-OtYCacSLK62rLoH8l1yCafckgS10TansdHekRyuFCj6GtfnJnlP5B2FYFbNz1oaOmEPprk60muA8q__U2sJ6aZ4NXM=w1280"
               alt=""
             />
-            <h3>Psicoterapia individual</h3>
+            <h3>Desenvolvimento de habilidades socioemocionais</h3>
             <p>
-              Atendimento a adolescentes, adultos e idosos em um espaço
-              confidencial para explorar desafios, problemas e angústias,
-              desenvolvendo estratégias de autocuidado e inteligência emocional.
+              Atendimento clínico dedicado ao aprimoramento das habilidades socioemocionais. Trabalharemos juntos para desenvolver sua capacidade de interagir socialmente, se comunicar melhor em grupos, construir relacionamentos saudáveis e melhorar sua confiança nas interações sociais.
             </p>
           </div>
+
+          <div class="container_tipo">
+            <img
+              src="https://lh4.googleusercontent.com/T7x09bkucvmtsqNSJ9WLm5y15S-DtFYQVcwNq-OtYCacSLK62rLoH8l1yCafckgS10TansdHekRyuFCj6GtfnJnlP5B2FYFbNz1oaOmEPprk60muA8q__U2sJ6aZ4NXM=w1280"
+              alt=""
+            />
+            <h3>Psicoterapia de casais</h3>
+            <p>
+              No meu trabalho como psicólogo, concentro-me em ajudar casais a superar desafios em seus relacionamentos, abordando questões de comunicação e conflitos. Por meio da Terapia de Casal, auxilio-os a desenvolver habilidades de comunicação mais eficazes, a lidar construtivamente com conflitos e a fortalecer sua intimidade. Durante as sessões, identificamos padrões disfuncionais de comportamento e implementamos estratégias para melhorar a dinâmica do relacionamento, frequentemente atribuindo tarefas para a aplicação prática do aprendizado entre as sessões.
+            </p>
+          </div>
+
+
         </div>
+
       </section>
 
       <section class="button">
         <button>
-          <a href="">Agende sua sessão</a>
+          <a href="https://api.whatsapp.com/message/HMEDG4CMPXDBM1?autoload=1&app_absent=0">Agende sua sessão</a>
         </button>
       </section>
 
-      <section class="depoimentos">
-        <h2 id="depoimentos">Depoimentos</h2>
+      <section id="depoimentos" class="depoimentos">
+        <h2 >Depoimentos</h2>
         <div class="container_depoimentos">
           <h3>CA, Mulher, 52 anos</h3>
           <h4>(Psicoterapia Onilne)</h4>
@@ -135,12 +143,12 @@
         <button><a href=""> Vamos conversar? </a></button>
       </section>
 
-      <section class="sobre">
+      <section id="sobremim" class="sobre">
         <div class="part1">
           <img src="./img/jonas.jpg" alt="" />
         </div>
         <div class="part2">
-          <h2 id="sobremim">Sobre mim</h2>
+          <h2 >Sobre mim</h2>
           <p>
             Sou psicólogo, formado pela Universidade de Brasília e com Pós
             graduação em neuropsicologia. Possuo uma sólida experiência clínica
@@ -153,10 +161,10 @@
         </div>
       </section>
 
-      <section class="contato">
-        <h2 id="contato">Entre em contato</h2>
+      <section  id="contato"class="contato">
+        <h2 >Entre em contato</h2>
         <div class="contato_img">
-          <a href=""><img src="./img/whats.png" alt="" /></a>
+          <a href="https://api.whatsapp.com/message/HMEDG4CMPXDBM1?autoload=1&app_absent=0"><img src="./img/whats.png" alt="" /></a>
           <a href=""><img src="./img/email.png" alt="" /></a>
         </div>
 
